--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cv-cli"
+name = "cvc-cli"
 version = "0.1.0"
 description = ""
 authors = ["Cristhian"]
@@ -9,13 +9,16 @@ python = "^3.8"
 typer = "^0.3.2"
 opencv-python = "^4.5.2"
 joblib = "^1.0.1"
+tqdm = "^4.61.1"
 
 [tool.poetry.dev-dependencies]
 pdbpp = "^0.10.2"
 jupyterlab = "^3.0.16"
 
 [tool.poetry.scripts]
-cvc-convert ="cv_cli.cli.convert:main"
+cvc-convert ="cvc_cli.cli.convert:main"
+cvc-stereo="cvc_cli.cli.stereo:main"
+cvc-mono="cvc_cli.cli.mono:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
